@@ -1,1 +1,11 @@
 # simon
+## Juego "Simon Dice" hecho en javafx
+## Requisitos
+* Java 11 ó 13 
+* JavaFX SDK 11.0.2 ó 13.0.2
+## Instrucciones
+* ```git clone https://github.com/sarquis88/simon```
+* ```cd simon```
+* Para habilitar el funcionamiento de la base de datos que contiene los puntajes:
+```chmod 777r src/simon/```
+* ```java --module-path /path/to/javafx-sdk-VERSION/lib --add-modules=javafx.controls -jar out/artifacts/simon_jar/simon.jar```
